@@ -174,6 +174,8 @@ Deprecated Functionality
 - Most global type/value pointers in NetVar.h are deprecated, but one can
   still always perform the lookup themselves.
 
+- ``Scope::Lookup()`` is deprecated, use ``Scope::Find()``.
+
 Zeek 3.1.0
 ==========
 
